@startuml ERD

entity "Tenant" as tenant {
  *id : string
  --
  name : string
}

entity "User" as user {
  *id : string
  --
  email : string
  password_hash : string
  role : string
  tenant_id : string
}

entity "Employee" as employee {
  *id : string
  --
  tenant_id : string
  full_name : string
  email : string
  telegram_chat_id : string
  birthday : date
  hired_date : date
  position : string
  team_id : string
  feelings_log : json
  accounts : json
}

entity "Team" as team {
  *id : string
  --
  tenant_id : string
  name : string
  description : string
  member_ids : json
  email_aliases : json
}

entity "Job" as job {
  *id : string
  --
  tenant_id : string
  service : string
  action : string
  target_name : string
  status : string
  result : string
  created_at : datetime
  updated_at : datetime
  metadata : json
}

entity "Message" as message {
  *id : string
  --
  tenant_id : string
  employee_id : string
  sender : string
  channel : string
  text : string
  subject : string
  timestamp : datetime
}

entity "UnassignedMessage" as unassigned_message {
  *id : string
  --
  tenant_id : string
  channel : string
  source_id : string
  sender_name : string
  text : string
  subject : string
  timestamp : datetime
}

entity "Asset" as asset {
  *id : string
  --
  tenant_id : string
  employee_id : string
  provider : string
  asset_type : string
  identifier : string
  status : string
  metadata : json
  created_at : datetime
  updated_at : datetime
}

' Relationships
tenant ||--o{ user : "has"
tenant ||--o{ employee : "has"
tenant ||--o{ team : "has"
tenant ||--o{ job : "has"
tenant ||--o{ message : "has"
tenant ||--o{ unassigned_message : "has"
tenant ||--o{ asset : "has"

employee }o--|| team : "belongs to"

team ||--o{ employee : "has members"

message }o--|| employee : "belongs to"

asset }o--|| employee : "belongs to"

@enduml